[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scenes/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://src/audio/music/SkyMusic.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/audio/music/GarbageMusic.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/audio/music/CosmicMusic.mp3" type="AudioStream" id=4]

[node name="SoundManager" type="Node2D"]
script = ExtResource( 1 )

[node name="MusicChannel1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MusicChannel2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MusicChannel3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SoundChannel1" type="AudioStreamPlayer" parent="."]

[node name="SoundChannel2" type="AudioStreamPlayer" parent="."]

[node name="SoundChannel3" type="AudioStreamPlayer" parent="."]

[node name="SoundChannel4" type="AudioStreamPlayer" parent="."]
